fixes image distort

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 html, body, header, nav, h1, a, ul, li, strong, main,
-button, i, section, img, div, h2, p, form, fieldset,
+button, i, section, div, h2, p, form, fieldset,
 label, input, textarea, span, article, footer, time, small {
     margin: 0;
     border: 0;
@@ -42,7 +42,7 @@ html {
 
 .page-title {
     font-family: 'Roboto', sans-serif;
-    font-size: 60px;
+    font-size: 50px;
     margin: 60px;
     margin-bottom: 30px;
 }
@@ -59,8 +59,10 @@ html {
 }
 
 .card {
-    width: 440px;
+    width: 500px;
     height: 230px;
+    font-size: 30px;
+    text-align: center;
     border: solid 1px black;
     border-radius: 8px;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
@@ -69,6 +71,13 @@ html {
     color: rgb(33,33,33);
     padding: 40px;
     align-items: center;
+}
+
+.shape {
+    display: flex;
+    width: 500px;
+    height: 500px;
+    border-radius: 8px;
 }
 
 .row {
@@ -87,7 +96,7 @@ html {
 }
 
 .question {
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .links {
@@ -136,4 +145,16 @@ html {
 .card-title {
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
+}
+
+#open-button {
+    font-size: 30px;
+    font-weight: 300;
+}
+
+img{
+    width: auto;
+    max-width: 500px;
+    height: auto;
+    max-height: 500px;
 }
